--- a/src/styles.css
+++ b/src/styles.css
@@ -22,13 +22,13 @@ body {
 
 .main {
   margin: 0 auto;
-  /* margin-top: 30px; */
-  /* padding-top: 30px; */
+  margin-top: 30px;
+  padding-top: 30px;
   margin-top: 70px;
   text-align: center;
   width: 100%;
   height: 300px;
-  background-color: coral;
+  /* background-color: coral; */
 }
 
 @media screen and (min-width: 990px) {
@@ -79,7 +79,7 @@ body {
 
 .wrapper-btn {
   margin-top: 50px;
-  background-color: red;
+  /* background-color: red; */
 }
 
 @media screen and (min-width: 990px) {
@@ -93,7 +93,6 @@ body {
     margin-top: 70px;
   }
 }
-
 
 
 #btn {
@@ -129,12 +128,12 @@ body {
 
 .wrapper-progress-bar {
   visibility: hidden;
-  /* margin-top: 20px; */
+  margin-top: 20px;
   padding-top: 10px;
   width: 100%;
   height: 200px;
 
-  background-color: red;
+  /* background-color: red; */
 }
 
 .bar-text-up {
@@ -162,13 +161,13 @@ body {
 
 .wrapper-bar {
   position: relative;
-  /* margin-top: 30px; */
+  margin-top: 30px;
   width: 100%;
   height: 3px;
   background-color: rgba(247, 242, 242, 0.1);
   margin-bottom: 7px;
   border-radius: 7px;
-  background-color: red;
+  /* background-color: red; */
 }
 
 .bar {
@@ -236,7 +235,7 @@ body {
 /* ---------------------------------------------- */
 
 /* блок с результатом */
-/* .wrapper-change-main {
+.wrapper-change-main {
   visibility: hidden;
   position: absolute;
   top: 0;
@@ -245,25 +244,51 @@ body {
   background-color: rgba(3, 82, 128, 0.7);
   width: 100%;
   height: 100vh;
-  /* background-color: green; *
+  /* background-color: green; */
 }
 
 .change-text {
   margin: 0 auto;
-  margin-top: 30px;
+  padding-top: 30px;
   text-align: center;
   width: 100%;
   height: 100vh;
   color: #ffff;
-  /* background-color: red; *
+  /* background-color: red; */
+}
+
+/* change-text */
+@media screen and (min-width: 990px) {
+  .change-text {
+    padding-top: 10px;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .change-text {
+    padding-top: 20px;
+  }
 }
 
 .heading-change-main {
   color: #ffff;
-  margin-top: 70px;
   margin-bottom: 30px;
   font-size: 32px;
   font-weight: bold;
+}
+
+
+/* heading-change-main */
+@media screen and (min-width: 990px) {
+  .heading-change-main {
+    margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .heading-change-main {
+    margin-top: 70px;
+  }
 }
 
 .text-change-main {
@@ -272,10 +297,10 @@ body {
   font-size: 18px;
   font-weight: 500;
   margin-top: 21px;
-} */
+}
 
 /* text-change-main */
-/* @media screen and (min-width: 990px) {
+@media screen and (min-width: 990px) {
   .text-change-main {
     margin-top: 25px;
   }
@@ -285,11 +310,11 @@ body {
   .text-change-main {
     margin-top: 30px;
   }
-} */
+}
 
 /* ---------------------------------------------- */
 
-/* #btn-change-main {
+#btn-change-main {
   margin-top: 50px;
   padding: 12px 37px;
   color: white;
@@ -306,4 +331,4 @@ body {
 #btn-change-main:hover {
   background-color: #ffff;
   color: #0081cc;
-} */
+}
